--- a/.github/workflows/execution-plan-main.yml
+++ b/.github/workflows/execution-plan-main.yml
@@ -7,6 +7,11 @@ name: "Execution Plan on main"
       - main
 
 jobs:
+  release:
+    uses: ./.github/workflows/release.yml
+    with:
+      trigger: main
+
   execution-plan:
     uses: ./.github/workflows/execution-plan-snippet.yml
     with:
@@ -18,3 +23,4 @@ jobs:
     uses: ./.github/workflows/integration-tests.yml
     with:
       trigger: main
+
