--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,17 +7,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: go-semantic-release/action@v1
-        id: semrel-dry
+      - name: Identify version to create
+        uses: go-semantic-release/action@v1
+        id: semrel-version
         with:
           dry: true
-          update-file: charts/kuberpult/Chart.yml
+          ghr: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Create helm chart for release
         run: |
-          make -C charts/kuberpult release-tag VERSION=${{ steps.semrel-dry.outputs.version }}
-      - uses: go-semantic-release/action@v1
+          make -C charts/kuberpult release-tag VERSION=${{ steps.semrel-version.outputs.version }}
+      - name: Create release
+        uses: go-semantic-release/action@v1
         id: semrel
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           changelog-generator-opt: "emojis=true"
+      - name: Append helm chart to release
+        run: |
+          gh release upload $VERSION charts/kuberpult/kuberpult-$VERSION.tgz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ steps.semrel.outputs.version }}
